--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ allprojects({
 
     ext({
         javaVersion = '1.8'
+        springBootVar = '1.5.12.RELEASE'
     })
 
     buildscript({
@@ -18,6 +19,10 @@ allprojects({
             mavenCentral()
             jcenter()
         })
+        
+        dependencies({
+            classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVar")
+           })
     })
 
     apply(plugin: 'java')
@@ -36,6 +41,12 @@ allprojects({
         maven({url("http://localhost:8081/repository/maven-public/")} )
         mavenCentral()
         jcenter()
+    })
+    
+    dependencies({
+        // spring boot
+        compile("org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVar")
+        testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVar")
     })
 
 })
