--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects({
     buildscript({
         repositories({
             mavenLocal()
+            maven({url("http://localhost:8081/repository/maven-public/")})
             mavenCentral()
             jcenter()
         })
