--- a/module/mode/build.gradle
+++ b/module/mode/build.gradle
@@ -5,13 +5,13 @@
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
  */
 
-version('1.1.0')
+version('1.1.1')
 
 //上传资源配置
-uploadArchives({
+/*uploadArchives({
      repositories({
          mavenDeployer({
             pom.version ="$project.version"
          })
      })
-})
+})*/
