--- a/app/clour-eureka/settings.gradle
+++ b/app/clour-eureka/settings.gradle
@@ -7,8 +7,4 @@
  * in the user guide at https://docs.gradle.org/4.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'app'
-include 'wede'
-include 'clour-eureka'
-includeFlat 'module'
-include 'module:mode'
+rootProject.name = 'clour-eureka'
