--- a/app/wede/src/main/resources/config/application.properties
+++ b/app/wede/src/main/resources/config/application.properties
@@ -1,1 +1,11 @@
-server.port=8088
+server.port=8090
+spring.application.name=wede
+
+spring.jmx.enabled=false
+
+management.context-path=/wede
+
+eureka.port=8080
+eureka.instance.prefer-ip-address: true
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${eureka.port}/clour-eureka/eureka
