通用库开发

--- a/app/settings.gradle
+++ b/app/settings.gradle
@@ -11,5 +11,7 @@ rootProject.name = 'app'
 include 'wede'
 include 'clour-eureka'
 include 'clour-confis'
+include 'clour-auth'
 includeFlat 'module'
 include 'module:mode'
+include 'module:clour-common'
