--- a/module/clour-common/settings.gradle
+++ b/module/clour-common/settings.gradle
@@ -7,6 +7,5 @@
  * in the user guide at https://docs.gradle.org/4.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'module'
-include 'mode'
-include 'clour-common'
+rootProject.name = 'clour-common'
+
