--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,9 @@
 rootProject.name = 'clour-java'
 include 'module'
 include 'module:mode'
+include 'module:clour-common'
 include 'app'
 include 'app:wede'
 include 'app:clour-eureka'
 include 'app:clour-confis'
+include 'app:clour-auth'
