添加路由服务

--- a/app/clour-auth/gradle.properties
+++ b/app/clour-auth/gradle.properties
@@ -1,5 +1,5 @@
 commmoVersion=1.0.0
-clourOauthVersion=1.2.3.RELEASE
+cloudOauthVersion=1.2.3.RELEASE
 mysqlVersion=5.1.46
 hikaricpVersion=2.7.8
 jacksonVersion=2.9.4
