--- a/app/clour-gateway/build.gradle
+++ b/app/clour-gateway/build.gradle
@@ -7,13 +7,9 @@
 
 dependencies({
     // spring boot
-    //compile("org.springframework.cloud:spring-cloud-config-server:$configServerVersion")
-    //compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:$busAmqpVersion")
-    //compile("org.springframework.boot:spring-boot-starter-security:$springBootVar")
-    
     
     compile(project(":module:clour-common"))
-    compile("org.springframework.cloud:spring-cloud-starter-oauth2:$cloudOauthVersion")
+ /*   compile("org.springframework.cloud:spring-cloud-starter-oauth2:$clourOauthVersion")
     compile("org.springframework.cloud:spring-cloud-starter-feign:$springCloudVar")
     compile("org.springframework.boot:spring-boot-starter-freemarker:$springBootVar")
 	compile("mysql:mysql-connector-java:$mysqlVersion")
@@ -21,6 +17,13 @@ dependencies({
 	compile("com.zaxxer:HikariCP:$hikaricpVersion")
 	compile("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
 	compile("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
-	compile("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
+	compile("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")*/
+	
+	compile("org.springframework.cloud:spring-cloud-starter-zuul:$springCloudVar")
+    compile("com.marcosbarbero.cloud:spring-cloud-zuul-ratelimit:$ratelimitVersion")
+    compile("org.springframework.cloud:spring-cloud-starter-oauth2:$cloudOauthVersion")
+    compile("org.springframework.cloud:spring-cloud-starter-feign:$springCloudVar")
+    compile("io.springfox:springfox-swagger-ui:$swaggerVersion")
+    compile("org.springframework.cloud:spring-cloud-starter-zipkin:$cloudZipkinVersion")
 })
 
