--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include 'app:clour-eureka'
 include 'app:clour-confis'
 include 'app:clour-auth'
 include 'app:clour-rbac'
+include 'app:clour-gateway'
