--- a/app/clour-confis/src/main/resources/config/application.properties
+++ b/app/clour-confis/src/main/resources/config/application.properties
@@ -23,7 +23,7 @@ spring.cloud.config.retry.max-interval=20000
 spring.cloud.config.retry.max-attempts=6
 
 eureka.port=8080
-eureka.instance.prefer-ip-address: true
+eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${eureka.port}/clour-eureka/eureka
 
