--- a/app/clour-gateway/settings.gradle
+++ b/app/clour-gateway/settings.gradle
@@ -7,13 +7,4 @@
  * in the user guide at https://docs.gradle.org/4.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'app'
-include 'wede'
-include 'clour-eureka'
-include 'clour-confis'
-include 'clour-auth'
-include 'clour-rbac'
-include 'clour-gateway'
-includeFlat 'module'
-include 'module:mode'
-include 'module:clour-common'
+rootProject.name = 'clour-gateway'
