服务中心配置修改

--- a/app/clour-eureka/src/main/resources/config/application.properties
+++ b/app/clour-eureka/src/main/resources/config/application.properties
@@ -5,9 +5,9 @@ security.basic.enabled=true
 security.user.name=clour
 security.user.password=clour123
 
-#eureka.client.fetch-registry: false
-#eureka.client.register-with-eureka: false
-#eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/clour-eureka/eureka/
+eureka.client.fetch-registry: false
+eureka.client.register-with-eureka: true
+eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${server.port}/clour-eureka/eureka/
 eureka.instance.hostname=localhost
 eureka.server.enable-self-preservation=false
 eureka.server.eviction-interval-timer-in-ms=5000
