--- a/app/clour-confis/build.gradle
+++ b/app/clour-confis/build.gradle
@@ -5,14 +5,15 @@
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
  */
 
-ext({
-    configServerVersion = '1.4.4.RELEASE'
-    busAmqpVersion = '1.3.4.RELEASE'
-})
+//ext({
+//    configServerVersion = '1.4.4.RELEASE'
+//    busAmqpVersion = '1.3.4.RELEASE'
+//})
 
 dependencies({
     // spring boot
-    compile("org.springframework.cloud:spring-cloud-config-server:$configServerVersion")
+    compile("org.springframework.cloud:spring-cloud-config-server:$springCloudVar")
+    compile("org.springframework.cloud:spring-cloud-starter-eureka:$springCloudVar")
     compile("org.springframework.cloud:spring-cloud-starter-bus-amqp:$busAmqpVersion")
 })
 
