--- a/app/clour-confis/src/main/resources/config/application.properties
+++ b/app/clour-confis/src/main/resources/config/application.properties
@@ -1,29 +1,32 @@
-server.port=8090
+server.port=4001
 spring.application.name=clour-config-server
-
-management.security.enabled=false
-endpoints.health.sensitive=false
-
-spring.jmx.enabled=false
-
-management.context-path=/clour-confis
-
-spring.rabbitmq.host=127.0.0.1
-spring.rabbitmq.port=5682
-spring.rabbitmq.username=clour
-spring.rabbitmq.password=clour123
+spring.profiles.active=native
 
 #spring.cloud.config.server.git.uri=https://gitee.com/cqzqxq_lxh/pig-config.git
 #spring.cloud.config.server.git.username=
 #spring.cloud.config.server.git.password=
-spring.cloud.config.server.git.uri=file:///E:/Share/config
+#spring.cloud.config.server.git.default-label=${spring.profiles.active}
+
+spring.cloud.config.server.native.search-locations=D:/Pasic/Resource/Config
+
+management.security.enabled=false
+management.context-path=/clour-confis
+endpoints.health.sensitive=false
+
+spring.jmx.enabled=false
+
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=clour
+spring.rabbitmq.password=clour123
+
 spring.cloud.config.retry.initial-interval=3000
 spring.cloud.config.retry.multiplier=1.5
 spring.cloud.config.retry.max-interval=20000
 spring.cloud.config.retry.max-attempts=6
 
-eureka.port=8080
+eureka.port=1025
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
-eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${eureka.port}/clour-eureka/eureka
+eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${eureka.port}/clour-eureka/eureka/
 
