--- a/app/clour-eureka/src/main/resources/config/application.properties
+++ b/app/clour-eureka/src/main/resources/config/application.properties
@@ -7,7 +7,7 @@ security.user.password=clour123
 
 eureka.client.fetch-registry: false
 eureka.client.register-with-eureka: true
-eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${server.port}/clour-eureka/eureka/
+eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${server.port}/eureka/
 eureka.instance.hostname=localhost
 eureka.server.enable-self-preservation=false
 eureka.server.eviction-interval-timer-in-ms=5000
