--- a/app/clour-confis/src/main/resources/config/application.properties
+++ b/app/clour-confis/src/main/resources/config/application.properties
@@ -28,5 +28,19 @@ spring.cloud.config.retry.max-attempts=6
 eureka.port=1025
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
-eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${eureka.port}/clour-eureka/eureka/
+eureka.client.serviceUrl.defaultZone=http://clour:clour123@${eureka.instance.hostname}:${eureka.port}/eureka/
 
+#server:
+#  port: 8888
+#  servlet:
+#    context-path: /config
+
+# eureka:
+#  instance:
+#    preferIpAddress: true
+#    health-check-url: http://localhost:${server.port}${server.servlet.context-path}/actuator/health
+#    status-page-url: http://localhost:${server.port}${server.servlet.context-path}/actuator/info
+#    home-page-url: http://localhost:${server.port}${server.servlet.context-path}
+#    metadata-map:
+#      configPath: ${server.servlet.context-pat:}
+#      management.context-path: ${server.servlet.context-path}
