--- a/app/clour-rbac/build.gradle
+++ b/app/clour-rbac/build.gradle
@@ -8,6 +8,7 @@
 dependencies({
     // spring boot
     compile(project(":module:clour-common"))
+    compile("org.springframework.cloud:spring-cloud-starter-eureka:$springCloudVar")
 	compile("mysql:mysql-connector-java:$mysqlVersion")
 	compile("com.baomidou:mybatisplus-spring-boot-starter:$mybatisplusBootVersion",{exclude(group:'org.apache.tomcat',module:'tomcat-jdbc')})
 	compile("com.zaxxer:HikariCP:$hikaricpVersion")
