初步调试通过

--- a/app/clour-auth/build.gradle
+++ b/app/clour-auth/build.gradle
@@ -20,8 +20,8 @@ dependencies({
 	compile("mysql:mysql-connector-java:$mysqlVersion")
 	compile("org.springframework.boot:spring-boot-starter-jdbc:$springBootVar",{exclude(group:'org.apache.tomcat',module:'tomcat-jdbc')})
 	compile("com.zaxxer:HikariCP:$hikaricpVersion")
-	compile("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
-	compile("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
-	compile("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
+	//compile("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
+	//compile("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
+	//compile("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
 })
 
