添加单点登录

--- a/app/settings.gradle
+++ b/app/settings.gradle
@@ -14,6 +14,7 @@ include 'clour-confis'
 include 'clour-auth'
 include 'clour-rbac'
 include 'clour-gateway'
+include 'clour-sso'
 includeFlat 'module'
 include 'module:mode'
 include 'module:clour-common'
