--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,9 @@ import org.gradle.plugins.ide.eclipse.model.Facet
 
 subprojects({
     ext({
-        springLoadedVersion = '1.2.8.RELEASE'
-        jstWebVersion = '3.1'
-        embedTomcatVersion = '9.0.7'
+        // springLoadedVersion = '1.2.8.RELEASE'
+        // jstWebVersion = '3.1'
+        // embedTomcatVersion = '9.0.7'
     })
 
     buildscript({
