--- a/app/clour-sso/settings.gradle
+++ b/app/clour-sso/settings.gradle
@@ -7,15 +7,4 @@
  * in the user guide at https://docs.gradle.org/4.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'clour-java'
-include 'module'
-include 'module:mode'
-include 'module:clour-common'
-include 'app'
-include 'app:wede'
-include 'app:clour-eureka'
-include 'app:clour-confis'
-include 'app:clour-auth'
-include 'app:clour-rbac'
-include 'app:clour-gateway'
-include 'app:clour-sso'
+rootProject.name = 'clour-sso'
