--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,5 @@ include 'app:clour-auth'
 include 'app:clour-rbac'
 include 'app:clour-gateway'
 include 'app:clour-sso'
+include 'app:clour-inter'
+include 'app:clour-portal'
