--- a/app/clour-eureka/build.gradle
+++ b/app/clour-eureka/build.gradle
@@ -5,6 +5,9 @@
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
  */
 
+//apply(plugin:'java')
+//apply(plugin:'spring-boot')
+
 dependencies({
     // spring boot
     compile("org.springframework.cloud:spring-cloud-starter-eureka-server:$springCloudVar")
