--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,10 @@ allprojects({
 
     buildscript({
         repositories({
-            mavenLocal()
+            //mavenLocal()
             maven({url("http://localhost:8081/repository/maven-public/")})
-            mavenCentral()
-            jcenter()
+            //mavenCentral()
+            //jcenter()
         })
         
         dependencies({
